# young-worker-nics

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
.github/workflows/: pull_request.yaml
dashboard/: .gitignore  next.config.js  package.json  tailwind.config.js  vercel.json
dashboard/app/: globals.css  layout.jsx  page.jsx
dashboard/public/data/: young_worker_nics_results.json
dashboard/src/components/: BaselineTab.jsx  ChartLogo.jsx  MethodNote.jsx  MethodologyLink.jsx  MethodologyTab.jsx  ReformTab.jsx  SectionHeading.jsx
dashboard/src/lib/: chartUtils.js  colors.js  dataHelpers.js  formatters.js
data/: young_worker_nics_results.json
scripts/: recently_active_cost.py
src/young_worker_nics/: __init__.py  calculator.py  cli.py  formulas.py  impacts.py  neet.py  pipeline.py  reform.py  sources.py
tests/: test_formulas.py  test_neet.py
