[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "young-worker-nics"
version = "0.1.0"
description = "Data pipeline for modelling an employer NICs exemption for young workers aged 18 to 24."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
authors = [
  { name = "PolicyEngine" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "microdf-python>=1.2.0",
]

[project.optional-dependencies]
simulation = [
  "policyengine>=4.11.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
young-worker-nics-build = "young_worker_nics.cli:main"

[project.urls]
Homepage = "https://github.com/PolicyEngine/young-worker-nics"
Repository = "https://github.com/PolicyEngine/young-worker-nics"

[tool.hatch.build.targets.wheel]
packages = ["src/young_worker_nics"]

[tool.hatch.build.targets.sdist]
include = [
  "src/young_worker_nics/**/*.py",
  "tests/**/*.py",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
